--- a/server/views/layout/includes/carrousel.pug
+++ b/server/views/layout/includes/carrousel.pug
@@ -8,11 +8,10 @@ section.ca
         img.d-block.w-100(src='../img/carousel/Trabajos de Bodas Josue Vigil.jpg' alt='Trabajos de Bodas Josue Vigil')
      .carousel-item
          img.d-block.w-100(src='../img/carousel/Baile de Boda.webp' alt='Tabajos de Bodas Josue Vigil')
-       
      .carousel-item
        img.d-block.w-100(src='../img/carousel/Boda Escaleras.webp' alt='Fotografias de Boda')
      .carousel-item
-       img.d-block.w-100(src='../img/carousel/Trabajos de Bodas pista.webp' alt='Fotografias de Boda')
+       img.d-block.w-100(src='../img/carousel/TrabajosdeBodaspista.webp' alt='Fotografias de Boda')
    button.carousel-control-prev(type='button' data-bs-target='#carouselExampleFade' data-bs-slide='prev')
          span.carousel-control-prev-icon(aria-hidden='true')
          span.visually-hidden Previous
