--- a/server/views/layout/includes/carrousel.pug
+++ b/server/views/layout/includes/carrousel.pug
@@ -11,7 +11,7 @@ section.ca
      .carousel-item
        img.d-block.w-100(src='../img/carousel/Boda Escaleras.webp' alt='Fotografias de Boda')
      .carousel-item
-       img.d-block.w-100(src='../img/carousel/TrabajosdeBodaspista.webp' alt='Fotografias de Boda')
+       img.d-block.w-100(src='../img/carousel/Baile de Boda.webp' alt='Fotografias de Boda')
    button.carousel-control-prev(type='button' data-bs-target='#carouselExampleFade' data-bs-slide='prev')
          span.carousel-control-prev-icon(aria-hidden='true')
          span.visually-hidden Previous
