--- a/server/views/layout/includes/navbar.pug
+++ b/server/views/layout/includes/navbar.pug
@@ -28,10 +28,14 @@ header#menuocultar
         ul.navbar-nav.justify-content-end.flex-grow-1.pe-3.text-center
           li.nav-item.mt-2
             a.nav-link(aria-current='page' href='/', class=(ruta==='/'? 'active':'')) Inicio
+            .linea
           li.nav-item.mt-2
             a.nav-link(href='/sobreMi', class=(ruta==='/sobreMi'? 'active':'')) Sobre M&iacute
+            .linea
           li.nav-item.mt-2
             a.nav-link(href='/portafolio', class=(ruta==='/portafolio'?'active':'')) Portafolio
+            .linea
           li.nav-item.mt-2
             a.nav-link(href='/contactanos', class=(ruta==='/contactanos'?'active':'')) Contactanos
+            .linea
         
